--- a/public/style.css
+++ b/public/style.css
@@ -5,11 +5,18 @@
     text-decoration: none;
     background: transparent;
      
+     
     
 }
 
 body{
-    background-color: rgb(30, 30, 30);
+    /* height: 100vh;
+    width: 100vw; */
+    /* background-color:#17202A; */
+    
+    background: linear-gradient(135deg, #17202A 40%,#283747);
+    /* z-index: -9; */
+    
     overflow: hidden;
     color: white;
     overflow-y: scroll;
