--- a/src/components/contact.css
+++ b/src/components/contact.css
@@ -4,10 +4,10 @@
     justify-content: center;
     flex-direction: column;
     padding-top: 2rem;
-    /* height: 100vh;
-    width: 100vw; */
+    
     margin-bottom: 4rem;
     margin-top: 6rem;
+    
 }
 .contact-in{
       
@@ -23,12 +23,13 @@ form{
     justify-content: center; 
     flex-direction: column;
     gap: 4rem;
-    height: 80vh;
+    height: 30rem;
     /* background-color: rgb(219, 187, 161); */
     padding: 2rem;
+    margin-top: 3rem;
     background: rgba(0, 0, 0, 0.281);
     border-radius: 16px;
-    /* box-shadow: 0 4px 30px rgba(0, 0, 0, 0.484); */
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.753);
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
 }
@@ -70,9 +71,16 @@ form{
     width: 50vh;
 }
 
+.contactform img{
+    height: 300px;
+    width: 300px;
+    /* position:absolute; */
+    
+}
+
  @media screen and (max-width:700px) {
     .css-1u3bzj6-MuiFormControl-root-MuiTextField-root{
-        width: 40vh;
+        width: 60vw;
     }
     /* .send-but{
         width: 5rem;
@@ -82,7 +90,7 @@ form{
     } */
     form{
         height: 70vh;
-        width: 98vw;
+        width: 95vw;
     }
 
     .contactform{
