--- a/src/components/myskills.css
+++ b/src/components/myskills.css
@@ -7,6 +7,7 @@
     width: 100vw; */
     padding-top: 4rem;
     margin-bottom: 8rem;
+    /* background: linear-gradient(135deg, #17202A 40%,#283747); */
 }
 
 .skills h2{
@@ -37,7 +38,7 @@
     background-clip: padding-box;
     border-radius: 45px; */
 
-    background: rgba(0, 0, 0, 0.096);
+    background: rgba(0, 0, 0, 0.33);
     border-radius: 16px;
     /* box-shadow: 0 4px 30px rgba(0, 0, 0, 0.484); */
     backdrop-filter: blur(5px);
