--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -11,7 +11,9 @@
   background-color:rgba(0, 0, 0, 0.411);
 }
 
- 
+ .logo img{
+  height: 3rem;
+ }
 
 .desktopmenuitems {
   cursor: pointer;
@@ -54,21 +56,22 @@ button:hover{
 .navmenu{
   position: absolute;
   top: 4rem;
-  right: 2rem;
+  right: -0.2rem;
   z-index: 2;
   display: flex;
   flex-direction: column;
-  padding: 0.5rem;
+  padding: 1rem;
   height: fit-content;
-  min-width: 15rem;
-  background: rgb(40, 40, 40);
+  min-width: 10rem;
+  background:#3e464eef;
   border-radius: 1rem;
 }
 .listitems{
   color: white;
   padding: 0.5rem 3rem;
   margin: 0.25rem;
-  background: rgb(30, 30, 30);
+  background: #17202afa;
+  border-radius: 2rem;
 }
 .mobMenu{
   display: none;
@@ -94,7 +97,7 @@ button:hover{
 
 }
 @media screen and (max-width:734px) {
-      .navbar h4{
+  .logo img{
         margin-left: -5rem;
       }
 }
