--- a/src/components/intro.css
+++ b/src/components/intro.css
@@ -26,7 +26,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: start;
+  align-items: flex-start;
   /* background-color: aliceblue; */
   /* width: 42vw; */
   padding-left: 8rem;
